--- a/web/index.html
+++ b/web/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" 
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/res/bootstrap.min.css">
+    <link rel="stylesheet" href="/res/app.css">
   </head>
 
   <body>
     <div id="elm-app-is-loaded-here"></div>
-    
+    <script src="/res/bootstrap.min.js"></script>
     <script src="/res/elm.js"></script>
     <script>
       var app = Elm.Main.init({
