--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="elm-app-is-loaded-here"></div>
     <script src="/res/bootstrap.min.js"></script>
-    <script src="/res/elm.js"></script>
+    <script src="/res/app.js"></script>
     <script>
       var app = Elm.Main.init({
         node: document.getElementById("elm-app-is-loaded-here")
